fix issues with mobile nav bar showing twice on desktop and not appearing on mobiles and add additional mobile only categories to drop down

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -65,11 +65,35 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--secondary-color) !important;
 }
 
+#products-navigation a {
+    color: var(--primary-color) !important;
+    text-decoration: none;
+    font-family: var(--font-primary);
+    font-weight: bold;
+}
+
+#products-navigation a:hover {
+    color: var(--secondary-accent) !important;
+}
+
 #products-navigation .navbar {
     letter-spacing: 0.03em;
     line-height: 1.6;
     font-family: var(--font-primary);
     font-weight: bold;
+}
+
+#products-navigation .navbar a {
+    color: var(--primary-color)
+}
+
+#main-nav {
+    padding-left: 10px;
+}
+
+.w-100.d-md-none.text-center.py-2{
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 #user-options + .dropdown-menu{
@@ -80,6 +104,10 @@ h1, h2, h3, h4, h5, h6 {
 #user-options + .dropdown-menu .dropdown-item {
     color: var(--secondary-color);
     background-color: var(--primary-accent);
+}
+
+#user-options + .dropdown-menu .dropdown-item:hover {
+    color: var(--secondary-accent) !important;
 }
 
 
@@ -175,7 +203,13 @@ main,
     background-color: var(--primary-accent);
 }
 
-/* Media Queries */
+@media (min-width: 768px){
+  #products-navigation .nav-link{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+}
+
 @media (min-width: 1200px) {
     .list-inline-item:not(:last-child) {
     margin-right: 1.5rem;
